# buffa

./: .changie.yaml  .gitattributes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  Taskfile.yml  rust-toolchain.toml
.changes/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.5.1.md  0.5.2.md  0.6.0.md  0.7.0.md  0.7.1.md  0.8.0.md  0.8.1.md  0.9.0.md  0.9.1.md  header.tpl.md
.changes/unreleased/: added-20260627-002930.yaml  added-20260628-211000.yaml  added-20260629-022332.yaml  added-20260629-144131.yaml  added-20260705-120000.yaml  added-20260706-044847.yaml  added-20260706-162526.yaml  added-20260707-022930.yaml  added-20260708-011513.yaml  added-20260708-180602.yaml  added-20260713-120437.yaml  added-20260717-010402.yaml  added-20260717-072952.yaml  added-20260723-224909.yaml  added-20260723-233215.yaml  added-20260723-234036.yaml  added-20260723-235451.yaml  breaking-changes-20260701-165230.yaml  breaking-changes-20260702-200419.yaml  breaking-changes-20260723-224505.yaml  changed-20260626-192935.yaml  changed-20260627-000610.yaml  changed-20260629-051500.yaml  changed-20260706-162527.yaml  changed-20260716-195726.yaml  changed-20260716-205804.yaml  changed-20260720-114940.yaml  changed-20260724-000228.yaml  fixed-20260628-211001.yaml  fixed-20260701-041207.yaml  fixed-20260702-174601.yaml  fixed-20260702-212901.yaml  fixed-20260702-235813.yaml  fixed-20260703-001140.yaml  fixed-20260712-104637.yaml  fixed-20260714-102330.yaml  fixed-20260716-183011.yaml  fixed-20260716-195908.yaml  fixed-20260717-081732.yaml  fixed-20260721-123315.yaml  (+17 more)
.github/: publish-order.txt
.github/workflows/: ci.yml  cla.yaml  publish-crates.yml  release.yml  tools-image.yml
benchmarks/: Dockerfile.bench-buffa  Dockerfile.bench-google
benchmarks/buffa/: Cargo.toml  build.rs
benchmarks/buffa/benches/: analytics_event.rs  analytics_owned_types.rs  api_response.rs  column_batch.rs  common.rs  google_message1.rs  log_record.rs  media_frame.rs  mesh.rs  packed_tile.rs  protobuf.rs  reflect.rs
benchmarks/buffa/src/: lib.rs
benchmarks/charts/: README.md  cross_aggregate.py  cross_metal_run.sh  generate.py  measurement-spread.md  tables.md
benchmarks/datasets/: packed_signed.pb
benchmarks/google/: Cargo.toml
benchmarks/history/: DESIGN.md  README.md  REPORT.md  annotations.md  generate.py  parse_criterion.py  run-series.sh
benchmarks/prost/: Cargo.toml
benchmarks/prost-bytes/: Cargo.toml
benchmarks/proto/: bench_messages.proto  check-iso-protos.py
buffa/: Cargo.toml
buffa-build/: Cargo.toml
buffa-build/src/: lib.rs
buffa-codegen/: Cargo.toml
buffa-codegen/src/: comments.rs  context.rs  defaults.rs  enumeration.rs  extension.rs  feature_gates.rs  feature_overrides.rs  features.rs  field_names.rs  idents.rs  impl_message.rs  impl_text.rs  imports.rs  lazy_view.rs  lib.rs  message.rs  oneof.rs  open_enums.rs  owned_view.rs  reflect.rs  reflect_owned.rs  reflect_view.rs  view.rs
buffa-codegen/tests/: codegen_integration.rs  (+1 more)
buffa-descriptor/: Cargo.toml  README.md
buffa-descriptor/src/: desc.rs  lib.rs  pool.rs
buffa-descriptor/src/reflect/: containers.rs  dynamic.rs  json.rs  json_wkt.rs  message.rs  mod.rs  value.rs  view.rs
buffa-descriptor/tests/: dynamic_e2e.rs  json_e2e.rs  options_any_symbol_e2e.rs  pool_decode_limits.rs  pool_e2e.rs
buffa-descriptor/tests/protos/: closed_enum_test.proto  editions_test.proto  reflect_test.fds  reflect_test.proto  reflect_test_options.fds  reflect_test_options.proto
buffa-remote-derive/: Cargo.toml
buffa-smolstr/: Cargo.toml
buffa-smolstr/src/: lib.rs
buffa-test/: Cargo.toml  build.rs
buffa-test/protos/: box_type.proto  cross_package_pertype.proto  debug_redact.proto  idiomatic_fields.proto  inline_field.proto  lazy_views.proto  map_type.proto  map_type_custom.proto  mixed_reflect.proto  mixed_reflect_dep.proto  modcollide_oof.proto  nestpkg_inner.proto  nestpkg_outer.proto  prelude_shadow.proto  proto2_defaults.proto  string_map.proto  string_proto2.proto  string_types.proto  unbox_oneof.proto  verbatim_camel.proto  view_json.proto  vtable_bytes_repr.proto  vtable_string_repr.proto
buffa-test/src/: lib.rs
buffa-test/src/tests/: arbitrary_bytes.rs  basic.rs  box_type.rs  bytes_type.rs  closed_enum.rs  collision.rs  cross_ref.rs  debug_redact.rs  edge_cases.rs  element_memory_limit.rs  extensions.rs  extensions_json.rs  idiomatic_fields.rs  inline_field.rs  json.rs  keyword.rs  lazy_views.rs  map_type.rs  map_type_custom.rs  message_set.rs  mod.rs  mod_collision.rs  nesting.rs  nestpkg.rs  open_enums.rs  owned_view.rs  proto2.rs  proto3_semantics.rs  repeated_type.rs  rope_encode.rs  string_type.rs  textproto.rs  type_prefix.rs  unbox_oneof.rs  utf8_validation.rs  view.rs  view_json.rs  wkt.rs
buffa-test/tests/: reflect_bridge.rs  reflect_mixed_mode.rs  string_map.rs  unbox_oneof_reflect.rs  vtable_bytes_repr.rs
buffa-test/tests/protos/: basic.fds
buffa-yaml/: Cargo.toml
buffa/src/: any_registry.rs  encode_sink.rs  encoding.rs  enumeration.rs  error.rs  extension.rs  extension_registry.rs  json_helpers.rs  lib.rs  map_codec.rs  message.rs  message_field.rs  size_cache.rs  test_doubles.rs  type_registry.rs  types.rs  unknown_fields.rs  view.rs
buffa/src/json_helpers/: tests.rs  wkt.rs
buffa/src/text/: decoder.rs  encoder.rs  error.rs  mod.rs  string.rs  token.rs
conformance/: Cargo.toml  Dockerfile  build.rs  known_failures_reflect.txt  run-conformance.sh
docs/: guide.md  migration-from-prost.md  migration-from-protobuf.md
examples/buffa-smolstr/: Cargo.toml  README.md
examples/buffa-smolstr/src/: lib.rs
examples/custom-types/: Cargo.toml  README.md  build.rs
examples/custom-types/proto/: record.proto
examples/custom-types/src/: main.rs  types.rs
examples/custom-types/src/types/: flex_str.rs
protoc-gen-buffa/: Cargo.toml  Dockerfile
protoc-gen-buffa-packaging/: Cargo.toml
scripts/: build-conformance-tools.sh  check-publish-coverage.sh  fuzz-all.sh  gen-bootstrap-types.sh  run-conformance-local.sh
signatures/: cla.json
(+82 files in other folders)
