[workspace]
resolver = "2"
members = [
    "buffa",
    "buffa-types",
    "buffa-descriptor",
    "buffa-codegen",
    "buffa-build",
    "buffa-test",
    "protoc-gen-buffa",
    "protoc-gen-buffa-packaging",
]
exclude = [
    "benchmarks/gen-datasets",
    "benchmarks/buffa",
    "benchmarks/prost",
    "benchmarks/prost-bytes",
    "benchmarks/google",
    "benchmarks/go",
    "examples/addressbook",
    "examples/envelope",
    "examples/logging",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/anthropics/buffa"
keywords = ["protobuf", "protocol-buffers", "serialization", "no-std", "editions"]
categories = ["encoding", "no-std"]

# Applies to release builds within this workspace (CI-built release binaries,
# benchmarks, conformance). Library consumers do not inherit this — Cargo only
# honors [profile.*] from the top-level workspace, so a project depending on
# buffa/buffa-build must set its own [profile.release] to get LTO.
[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
buffa = { path = "buffa", version = "0.4.0", default-features = false }
buffa-types = { path = "buffa-types", version = "0.4.0" }
buffa-descriptor = { path = "buffa-descriptor", version = "0.4.0" }
buffa-codegen = { path = "buffa-codegen", version = "0.4.0" }
buffa-build = { path = "buffa-build", version = "0.4.0" }
buffa-test = { path = "buffa-test", version = "0.4.0" }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes = { version = "1", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
once_cell = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
arbitrary = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
