[package]
name = "buffa-smolstr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "buffa ProtoString support for smol_str::SmolStr (string_type preset)."
# In-repo reference crate only — not published. It demonstrates the
# `ProtoString` newtype pattern for a foreign type (`smol_str::SmolStr`);
# consumers should write their own newtype against their own `smol_str`
# version rather than depend on this crate's pin. See `examples/custom-types`
# for the end-to-end walkthrough.
publish = false

[features]
# Proto3 JSON support: derive Serialize/Deserialize so the newtype works in
# optional / repeated string fields (which serialize through the element's
# native serde). Off by default to keep the binary/text-only path lean.
serde = ["dep:serde", "smol_str/serde"]

[dependencies]
# buffa-smolstr is a std crate (it depends on buffa/std), so use smol_str with
# std too — smol_str 0.3's serde impl requires it, and without it enabling the
# `serde` feature fails to compile unless another crate happens to unify
# `smol_str/std` in.
buffa = { workspace = true, features = ["std"] }
smol_str = { workspace = true, features = ["std"] }
serde = { workspace = true, optional = true, features = ["derive"] }
