[package]
name = "example-custom-types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
buffa = { path = "../../buffa", features = ["std", "json"] }
buffa-smolstr = { path = "../../buffa-smolstr", features = ["serde"] }
buffa-types = { path = "../../buffa-types", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
buffa-build = { path = "../../buffa-build" }
